--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noEmit": false,
+    "skipLibCheck": true
   }
 }
