--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-geolocated": "^4.4.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.9.4",
     "recharts": "2.15.4",
